Fix last room in list clipped
Fixes https://github.com/vector-im/element-web/issues/26049

--- a/res/css/views/avatars/_DecoratedRoomAvatar.pcss
+++ b/res/css/views/avatars/_DecoratedRoomAvatar.pcss
@@ -18,7 +18,7 @@ limitations under the License.
 .mx_ExtraTile {
     position: relative;
     contain: content;
-    line-height: 1;
+    line-height: 0;
 
     &.mx_DecoratedRoomAvatar_cutout .mx_BaseAvatar {
         mask-image: url("$(res)/img/element-icons/roomlist/decorated-avatar-mask.svg");
